test/must_fail/diode_bad_param_five.ngjs
#!/usr/bin/env ngspicejs
// Extra argument in diode must cause error
// linter: ngspicejs-lint
"use strict";

diode_model('1N4148');
diode('D2', 1, 0, '1N4148', 123);

